--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+cvr_env/
+
+Evaluators/__pycache__/
+
+\.idea/
